--- a/styles.css
+++ b/styles.css
@@ -16,25 +16,25 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     width: 400px;
-    height: 300px; /* Set height to make it a square */
+    height: 400px; /* Adjusted height to fit all screens */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center; /* Center the content horizontally */
 }
 
-h1 {
+h1, h2 {
     margin-bottom: 20px;
     font-size: 24px;
     color: #1c92d2;
 }
 
-.button-container {
+.button-container, .round-button {
     display: flex;
     flex-direction: column;
 }
 
-.game-button {
+.game-button, .round-button {
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
@@ -46,12 +46,12 @@ h1 {
     transition: transform 0.2s, background-color 0.2s;
 }
 
-.game-button:hover {
+.game-button:hover, .round-button:hover {
     background-color: #f8cdda;
     transform: scale(1.1);
 }
 
-#result {
+#result, #final-result {
     margin-top: 20px;
     font-size: 18px;
 }
